--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "douban-movie",
+  "name": "douban-movie-search",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -7,8 +7,11 @@
     "build": "vue-cli-service build"
   },
   "dependencies": {
+    "axios": "^0.21.1",
     "core-js": "^3.8.3",
+    "element-ui": "^2.15.8",
     "vue": "^2.6.14",
+    "vue-lazyload": "^1.3.3",
     "vue-router": "^3.5.1",
     "vuex": "^3.6.2"
   },
