--- a/package.json
+++ b/package.json
@@ -18,6 +18,9 @@
   "devDependencies": {
     "@vue/cli-plugin-babel": "^5.0.0",
     "@vue/cli-service": "^5.0.0",
+    "postcss-preset-env": "^7.8.1",
+    "sass": "^1.54.8",
+    "sass-loader": "^13.0.2",
     "vue-template-compiler": "^2.6.14"
   }
 }
